--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>HTML Tutorial</title>
-</head>
+
+    <head>
+        <!--=============== css  ===============-->	
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+        
+    </head>
+
 <body>
 
 The content of the document......
